<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@+id/nav_graph_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/popular_fragment">

    <fragment
        android:id="@+id/popular_fragment"
        android:name="com.rkukac.movieapp.ui.navbar.popular.PopularFragment"
        android:label="@string/screen_title_popular"
        tools:layout="@layout/fragment_popular" />

    <fragment
        android:id="@+id/search_fragment"
        android:name="com.rkukac.movieapp.ui.navbar.search.SearchFragment"
        android:label="@string/screen_title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/favourites_fragment"
        android:name="com.rkukac.movieapp.ui.navbar.favourites.FavouritesFragment"
        android:label="@string/screen_title_favourites"
        tools:layout="@layout/fragment_favourites" />

</navigation>