<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_content_title"
        style="@style/TextStyle.Screen.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/favourites_content_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_content_description"
        style="@style/TextStyle.Screen.Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/favourites_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_content_title" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextStyle.ComingSoon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/favourites_coming_soon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_content_description" />

</androidx.constraintlayout.widget.ConstraintLayout>