<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_content_title"
        style="@style/TextStyle.Search.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_content_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_content_description"
        style="@style/TextStyle.Search.Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_content_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_content_search"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_content_description" />

    <View
        android:id="@+id/divider_top"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/space_side_vertical"
        android:background="@color/movie_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_content_search" />

    <ViewAnimator
        android:id="@+id/view_animator"
        style="@style/ViewAnimatorStyle"
        app:layout_constraintBottom_toTopOf="@id/divider_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_top">

        <include
            android:id="@+id/inc_list"
            layout="@layout/layout_list"
            android:visibility="gone" />

        <include
            android:id="@+id/inc_loading"
            layout="@layout/layout_loading" />

        <include
            android:id="@+id/inc_error"
            layout="@layout/layout_error" />

        <include
            android:id="@+id/inc_empty"
            layout="@layout/layout_empty" />

    </ViewAnimator>

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/space_side"
        android:background="@color/movie_grey"
        app:layout_constraintBottom_toTopOf="@id/button_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_search"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_content_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>